# powerbi-ext

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: check.yml  test.yml
powerbi_ext/: auth.py  extension.py  main.py  pass_through.py
powerbi_extension/: __init__.py  auth.py  extension.py  main.py
tests/: test_auth.py  test_extension.py  test_main.py
