[tool.poetry]
name = "utility-powerbi"
version = "0.0.1"
description = "Meltano utility extension for triggering and monitoring Power BI dataset refreshes."
authors = ["Matatika <support@matatika.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Matatika/utility-powerbi"
packages = [
    { include = "powerbi_extension" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PyYAML = "^6.0.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk" = { git = "https://github.com/meltano/edk.git", rev = "main" }
azure-identity = "^1.14.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
powerbi-extension = 'powerbi_extension.main:app'
